--- a/basic/view/index.html
+++ b/basic/view/index.html
@@ -66,13 +66,13 @@
   <script src="<%= prefix %>/assets/lib/react-dom.min.js"></script>
   <script src="<%= prefix %>/assets/lib/ReactRouter.min.js"></script>
   <script src="<%= prefix %>/assets/lib/antd.min.js"></script> -->
-  <link href="https://cdn.bootcss.com/antd/3.5.0/antd.min.css" rel="stylesheet">
-  <script src="https://cdn.bootcss.com/babel-polyfill/6.26.0/polyfill.min.js"></script>
-  <script src="https://cdn.bootcss.com/react/15.6.2/react-with-addons.min.js"></script>
-  <script src="https://cdn.bootcss.com/lodash.js/4.17.4/lodash.min.js"></script>
-  <script src="https://cdn.bootcss.com/react-dom/15.6.2/react-dom.min.js"></script>
-  <script src="https://cdn.bootcss.com/react-router/3.2.1/ReactRouter.min.js"></script>
-  <script src="https://cdn.bootcss.com/antd/3.5.0/antd.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/antd@3.15.2/dist/antd.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/babel-polyfill@6.26.0/dist/polyfill.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react@15.6.2/dist/react-with-addons.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@15.6.2/dist/react-dom.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-router@3.2.1/umd/ReactRouter.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/antd@3.15.2/dist/antd.min.js"></script>
 <% } %>
 
 <script type="text/javascript" src="<%= prefix %>/assets/vendor.js"></script>
