--- a/basic/view/index.html
+++ b/basic/view/index.html
@@ -24,6 +24,14 @@
   <!-- 正式环境中,请将上面几个链接替换为下面的链接,注意 {version} 改为你对应的资源版本号 -->
   <!--<link rel="stylesheet" href="//g.alicdn.com//{version}??lib/next.css,pages/help/index.bundle.css">-->
   <link rel="shortcut icon" href="<%= prefix %>/assets/public/img/favicon.ico" type="image/vnd.microsoft.icon" />
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.css">
+  <script src="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.js"></script>
+  <script type="text/javascript">
+    $(function(){
+      NProgress.start();
+    })
+  </script>
 </head>
 <body>
 <div id="container" style="width:100%;height:100%;"></div>
@@ -77,6 +85,10 @@
 
 <script type="text/javascript" src="<%= prefix %>/assets/vendor.js"></script>
 <script type="text/javascript" src="<%= prefix %>/assets/app.js"></script>
-
+<script type="text/javascript">
+  window.onload=function(){
+    NProgress.done();
+  }
+</script>
 </body>
 </html>
