引入富文本

--- a/api/view/index.html
+++ b/api/view/index.html
@@ -75,9 +75,9 @@
 <script type="text/javascript" src="<%= prefix %>/assets/vendor.js"></script>
 <script type="text/javascript" src="<%= prefix %>/assets/app.js"></script>
 <script type="text/javascript">
-  window.onload=function(){
+  $(function(){
     NProgress.done();
-  }
+  })
 </script>
 </body>
 </html>
