--- a/basic/assets/components/Sider/index.less
+++ b/basic/assets/components/Sider/index.less
@@ -20,7 +20,7 @@
             text-align: center;
             font-weight: bold;
             padding: 8px 0px;
-            font-size: 1.5rem;
+            font-size: 24px;
             font-family: "Monospace Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
         .user_desc {
@@ -34,7 +34,7 @@
         margin-top:10px;
         .tags-content{
             .ant-tag {
-                font-size: 1rem;
+                font-size: 16px;
               }
         }
         
