--- a/basic/view/index.html
+++ b/basic/view/index.html
@@ -56,6 +56,7 @@
 <!-- 需要替换的链接 Start -->
 <script src="<%= prefix %>/assets/utils/moment.min.js"></script>
 <% if (isDebug) { %>
+  <script src="<%= prefix %>/assets/node_modules/prop-types/prop-types.js"></script>
   <link rel="stylesheet" href="<%= prefix %>/assets/node_modules/antd/dist/antd.css">
   <script src="<%= prefix %>/assets/node_modules/babel-polyfill/dist/polyfill.js"></script>
   <script src="<%= prefix %>/assets/node_modules/react/dist/react-with-addons.js"></script>
@@ -63,6 +64,9 @@
   <script src="<%= prefix %>/assets/node_modules/react-dom/dist/react-dom.js"></script>
   <script src="<%= prefix %>/assets/node_modules/react-router/umd/ReactRouter.js"></script>
   <script src="<%= prefix %>/assets/node_modules/antd/dist/antd.js"></script>
+  <script src="<%= prefix %>/assets/utils/highlight.min.js"></script>
+  <link rel="stylesheet" href="<%= prefix %>/assets/node_modules/react-quill/dist/quill.snow.css">
+  <script src="<%= prefix %>/assets/node_modules/react-quill/dist/react-quill.min.js"></script>
 <% } else { %>
   <!-- <link rel="stylesheet" href="<%= prefix %>/assets/lib/antd.min.css">
   <script src="<%= prefix %>/assets/lib/polyfill.js"></script>
@@ -71,6 +75,7 @@
   <script src="<%= prefix %>/assets/lib/react-dom.min.js"></script>
   <script src="<%= prefix %>/assets/lib/ReactRouter.min.js"></script>
   <script src="<%= prefix %>/assets/lib/antd.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/prop-types@15.7.2/prop-types.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/antd@3.15.2/dist/antd.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/babel-polyfill@6.26.0/dist/polyfill.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/react@15.6.2/dist/react-with-addons.min.js"></script>
@@ -78,14 +83,17 @@
   <script src="https://cdn.jsdelivr.net/npm/react-dom@15.6.2/dist/react-dom.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-router@3.2.1/umd/ReactRouter.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/antd@3.15.2/dist/antd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/react-quill@1.3.3/dist/quill.snow.css">
+  <script src="https://cdn.jsdelivr.net/npm/react-quill@1.3.3/dist/react-quill.min.js"></script>
 <% } %>
 
 <script type="text/javascript" src="<%= prefix %>/assets/vendor.js"></script>
 <script type="text/javascript" src="<%= prefix %>/assets/app.js"></script>
 <script type="text/javascript">
-  window.onload=function(){
+  $(function(){
     NProgress.done();
-  }
+  })
 </script>
 </body>
 </html>
